--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,3 +1,12 @@
 $primary: orangered;
 $secondary: dodgerblue;
-$percents: 10, 20, 30, 40, 50, 60, 70, 80, 90;
+
+$start: 1;
+$end: 100;
+
+$percents: "";
+
+@for $i from $start + 1 through $end {
+  $percents: append($percents, $i, comma);
+  $percents: set-nth($percents, 1, $start);
+}
