--- a/components/NavButtons/NavButtons.css
+++ b/components/NavButtons/NavButtons.css
@@ -1,39 +1,57 @@
+html[data-theme="light"] {
+  --side-nav-color: rgb(30, 30, 30);
+}
+
+html[data-theme="dark"] {
+  --side-nav-color: rgb(225, 225, 225);
+}
+
 .fixed_nav {
-    position: fixed;
-    display: inline-block;
-    left: 50%;
-    bottom: 1%;
-    background: var(--outer-background-color);
-    color: var(--side-color);
-    border-radius: 0.5rem;
-    border: .1em solid black;
-    z-index: 2147483647;
-    transform: translate(-50%, -50%); }
+  position: fixed;
+  display: inline-block;
+  left: 50%;
+  bottom: 1%;
+  background: var(--background-color);
+  color: var(--side-color);
+  border-radius: 0.5rem;
+  border: .1em solid black;
+  z-index: 2147483647;
+  transform: translate(-50%, -50%); 
+}
+
+@media (max-width: 400px) {
+  .fixed_nav {
+    bottom: -1.5%;
+    left: 75%;
+    width: 45vw;
+  }
+}
+
+.fixed_nav > a {
+  padding: 0 .8rem; 
+}
   
-  .fixed_nav > a {
-    padding: 0 .8rem; }
-  
-  .fixed_nav > a:hover {
-    filter: invert(1);
-    text-decoration: underline !important; }
-  
-  div.vertical_line {
-    height: .8em;
-    display: inline-block;
-    border-right: .1em solid black; }
-  
-  .nav-link {
-    display: inline-block; }
-  
-  .hide_fixed_nav {
-    position: fixed;
-    display: inline-block;
-    left: 2.5%;
-    bottom: 2.5%; }
-  
-  .hide_fixed_nav > button {
-    background: var(--outer-background-color);
-    color: var(--side-color);
-    border-radius: 0.5rem;
-    border: .1em solid black; }
-  
+.fixed_nav > a:hover {
+  filter: invert(1);
+  text-decoration: underline !important; 
+  background-color: var(--side-nav-color);
+  border-radius: 0.5rem;
+}
+
+.nav-link {
+  display: inline-block; 
+}
+
+.hide_fixed_nav {
+  position: fixed;
+  display: inline-block;
+  left: 2.5%;
+  bottom: 2.5%; 
+}
+
+.hide_fixed_nav > button {
+  background: var(--background-color);
+  color: var(--side-color);
+  border-radius: 0.5rem;
+  border: .1em solid black; 
+}
